css/mfa2014.css
/* ... */
/* ?? */

.imgwrap img {
  width: 100%;
  max-width: 100%;
}

/* Footer Styles ************************/

footer {
  background-color:#f1f2f2;
  margin-top: 4em;
  min-height: 10em;
  padding-top: 4em;
  padding-bottom: 6em;
  text-align: center;
}

footer img, footer p, footer ul {
  margin-bottom: 20px;
}

footer p, footer a, footer li {
  color: #646464;
  font-weight: 500; 
}
  
/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) {
  footer {
    text-align: left;
  }
}
  
/* Overlay related styles */

.student-overlay {
  z-index: 9000;
  background: #fff;
  position: fixed;
  top:0;
  bottom:0;
  left:0;
  right:0;
  overflow: auto;
  padding: 0;
  margin: 0;
  border: 10px solid #EEE;
}

.critical .student-overlay {
  position: absolute;
  overflow: auto;
  min-height: 100%;
  height: 100%;
  margin: 0;
}

.student-overlay img.logo {
  position: static;
  display: block;
  margin: 0 auto 20px auto;
}

@media (min-width: 768px) and (min-height: 580px) {
  .student-overlay img.logo {
    position: fixed;
    left: 45px;
    bottom: 45px;
  }
}

.student-overlay .close {
  float: none;
  position: fixed;
  top:5px;
  right:7px;
  font-size: 4em;
  height: 1em;
  width: 1em;
  z-index: 9001;
  }

@media (min-width: 768px) {
  .student-overlay {
    border: 15px solid #EEE;
  }
}

@media (min-width: 992px) {
  .student-overlay {
    border: 20px solid #EEE;
  }
  .student-overlay .close {
    top:7px;
    right:9px;
  }
  
}

.student-overlay .container {
  padding-top: 30px;
}

.student-overlay ul {
  padding: 0;
}

.student-overlay h2 {
  font-size: 36px;
  margin: 0;
}

.student-overlay h2:last-of-type {
  margin-bottom: .66em;
}

.student-links li { margin-bottom: 5px; }
.student-links li a {
  color: #000;
  padding: 0;
  padding-top: 16px;
  border-bottom: 2px solid #bebebe;
  letter-spacing: 0;
  background-color: transparent;
  width: 100%;
}
  
.student-links li a:hover {
  color:inherit;
  text-decoration: none;
  border-bottom: 2px solid #FF4C47;
  background-color: transparent;
}
  
.student-links li a:active {
  color:#FF4C47;
  text-decoration: none;
  border-bottom: 2px solid #FF4C47;
  background-color: transparent;
}

.student-nav { margin-bottom: 30px; }

.student-nav.nav-justified > li {
  display: table-cell;
  width: 1%;
}

.student-nav .overlay-nav-icon {
  display: block;
  width: 43px;
  height:21px; 
  margin: 0;
  padding: 0;
}

.next .overlay-nav-icon {
  background-image:url('../img/icon_next.png');
}
  
.next .overlay-nav-icon:hover,
.next .overlay-nav-icon:active {
  background-image:url('../img/icon_next_over.png');  
}
  
.previous .overlay-nav-icon {
  background-image:url('../img/icon_prev.png');  
}
  
.previous .overlay-nav-icon:hover,
.previous .overlay-nav-icon:active {
  background-image:url('../img/icon_prev_over.png');  
}
  
.random .overlay-nav-icon {
  background-image:url('../img/icon_random.png');  
  }
  
.random .overlay-nav-icon:hover,
.random .overlay-nav-icon:active {
  background-image:url('../img/icon_random_over.png');  
}
  
.student-overlay h2.gap {
  visibility: hidden;
}

.student-statement {
  padding-right: 5%;
  padding-bottom: 30px;
}
  
.critical .program-list h4 {
  margin-top: 7px;
  padding: 0;
}

.program-list ul {
  padding-bottom: 30px;
}

.program-list li {
  margin-top: 5px;
}

.program-list li a {
  border-bottom: 2px solid #bebebe;
  color: #333;
}
  
.program-list li a:hover {
  color:inherit;
  text-decoration: none;
  border-bottom: 2px solid #FF4C47;
}
  
.program-list li a:active {
  color:#FF4C47;
  text-decoration: none;
  border-bottom: 2px solid #FF4C47;
  }
  
.program-list li a.active {
  color:#bebebe;
}

/* Student Overlay Slideshow */
#slideshow {
  margin-left: 0px;
  margin-bottom: 50px;
  text-align: center;
  min-height: 200px;
  max-height: 200px;
  }

.carousel-inner,  
.carousel-inner > .item {
  height: 200px;
  text-align: center;
  }

#singleimg {
  margin-left: 0px;
  margin-bottom: 30px;
  text-align: center;
  width: 100%;
  height: auto;
  }

#singleimg img {
  height: auto;
  width: 100%;
  }

/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) {
  #slideshow,
  #singleimg {
    margin-left: 0px;
    margin-bottom: 50px;
    text-align: center;
    min-height: 200px;
    max-height: 400px;
    height: auto;
    width: auto;
    }
  
  .carousel-inner,  
  .carousel-inner > .item {
    height: 400px;
    text-align: center;
    }

  #singleimg img {
    max-height: 100%;
    max-width: 100%;
    height: auto;
    width: auto;
    }

}

/* Medium devices (desktops, 992px and up) */
@media (min-width: 992px) {
  #slideshow,
  #singleimg {
    margin-left: 0px;
    margin-bottom: 50px;
    text-align: center;
    min-height: 200px;
    max-height: 500px;
    }
  
  .carousel-inner,  
  .carousel-inner > .item {
    height: 500px;
    text-align: center;
    }
  
}

/* Large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {
  #slideshow,
  #singleimg {
    margin-left: 0px;
    margin-bottom: 50px;
    text-align: center;
    min-height: 200px;
    max-height: 600px;
    }
  
  .carousel-inner,  
  .carousel-inner > .item {
    height: 600px;
    text-align: center;
    }
}

.carousel-inner > .item:before {
  content: '';
  display: inline-block;
  height: 100%; 
  vertical-align: middle;
  margin-right: -0.25em; /* Adjusts for spacing */
 }

/* http://css-tricks.com/centering-in-the-unknown/ - this is what I used for vertical centering... works like a charm! */
/* here is some other info too: http://gtwebdev.com/workshop/vcenter/vcenter-inline-css.php */

.carousel-inner > .item > img, 
.carousel-inner > .item > a > img {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  max-width: auto;
  height: auto;
  margin: 0 auto;
}
/* ... */

